--- a/404.html
+++ b/404.html
@@ -35,13 +35,7 @@
       <section class="error-section">
         <div class="error-container">
           <div class="error-visual">
-            <div class="error-number">404</div>
-            <div class="error-icon" aria-hidden="true">
-              <svg width="120" height="120" viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="60" cy="60" r="50" stroke="#00274C" stroke-width="4" fill="none"/>
-                <path d="M40 40 L80 80 M80 40 L40 80" stroke="#00274C" stroke-width="4" stroke-linecap="round"/>
-              </svg>
-            </div>
+            <img src="images/404.png" alt="404 error illustration" class="error-image">
           </div>
           <h1 class="error-title">Oops! Page Not Found</h1>
 
