--- a/career.html
+++ b/career.html
@@ -42,12 +42,32 @@
     </section>
     <section>
       <h2>The Support You Need, All in One Place</h2>
-      <ul>
-        <li><strong>Comprehensive Career Support:</strong> From career coaching and courses to workshops and interview prep, we cover every step of your job and internship search.</li>
-        <li><strong>Direct Access to Employers:</strong> Take advantage of our robust on-campus recruiting program and career fair to connect with employers eager to hire.</li>
-        <li><strong>Skill-Building for Success:</strong> Learn effective strategies for resumes, networking, and interviews that will serve you now and throughout your career.</li>
-        <li><strong>Preparation for the Future:</strong> Everything we offer is designed not just for your next role, but to support your long-term career success.</li>
-      </ul>
+      <div class="resource-list">
+        <article class="resource-item">
+          <h3 class="resource-title">Comprehensive Career Support</h3>
+          <p class="resource-description">
+            From career coaching and courses to workshops and interview prep, we cover every step of your job and internship search.
+          </p>
+        </article>
+        <article class="resource-item">
+          <h3 class="resource-title">Direct Access to Employers</h3>
+          <p class="resource-description">
+            Take advantage of our robust on-campus recruiting program and career fair to connect with employers eager to hire.
+          </p>
+        </article>
+        <article class="resource-item">
+          <h3 class="resource-title">Skill-Building for Success</h3>
+          <p class="resource-description">
+            Learn effective strategies for resumes, networking, and interviews that will serve you now and throughout your career.
+          </p>
+        </article>
+        <article class="resource-item">
+          <h3 class="resource-title">Preparation for the Future</h3>
+          <p class="resource-description">
+            Everything we offer is designed not just for your next role, but to support your long-term career success.
+          </p>
+        </article>
+      </div>
     </section>
     <section>
       <div>
