--- a/networking.html
+++ b/networking.html
@@ -89,21 +89,32 @@
     </section>
     <section>
       <h2>Why Networking Matters</h2>
-      <ul>
-        <li><strong>Everything in One Place:</strong> Events, alumni connections, employer sessions, and outreach templates.</li>
-        <li><strong>Student-focused Pathfinding:</strong> Browse by goals—career switch, first internship, or full-time search.</li>
-        <li><strong>Guidance Backed by Experts:</strong> All strategies are reviewed by the UMSI Career Development Office.</li>
-        <li><strong>Accessible & Inclusive:</strong> We design engagements with varied formats, times, and modalities.</li>
-        <li><strong>Built on UMSI Strengths:</strong> We benchmark peer institutions and leverage the power of our alumni network.</li>
-      </ul>
-    </section>
-    <section>
-      <h2>Three Steps to Start Connecting</h2>
-      <ul>
-        <li><strong>Clarify Your Ask.:</strong> Define what you want from a conversation: role insight, portfolio feedback, referrals, or culture checks.</li>
-        <li><strong>Reach Out Smartly:</strong> Use our email and LinkedIn message templates, then tailor them with one sentence about why you chose this person.</li>
-        <li><strong>Follow Through:</strong> Send a thank-you within 24 hours, log notes, and set a next step (share an update, attend a meetup, apply).</li>
-      </ul>
+      <div class="resource-list">
+        <article class="resource-item">
+          <h3 class="resource-title">Everything in One Place</h3>
+          <p class="resource-description">
+            Events, alumni connections, employer sessions, and outreach templates.
+          </p>
+        </article>
+        <article class="resource-item">
+          <h3 class="resource-title">Student-focused Pathfinding</h3>
+          <p class="resource-description">
+            Browse by goals—career switch, first internship, or full-time search.
+          </p>
+        </article>
+        <article class="resource-item">
+          <h3 class="resource-title">Guidance Backed by Experts</h3>
+          <p class="resource-description">
+            All strategies are reviewed by the UMSI Career Development Office.
+          </p>
+        </article>
+        <article class="resource-item">
+          <h3 class="resource-title">Accessible & Inclusive</h3>
+          <p class="resource-description">
+            We design engagements with varied formats, times, and modalities.
+          </p>
+        </article>
+      </div>
     </section>
     <section>
       <h2>Connect with the UMSI Career Development Office</h2>
