--- a/resume.html
+++ b/resume.html
@@ -46,48 +46,51 @@
       Need feedback? You can always <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">meet with a CDO Career Coach</a> to review your materials.
     </p>
   </section>
-  <section>
-    <h2>Resume Writing Made Easy: Steps to Success</h2>
-    <ol>
-      <li><strong>Download a UMSI-Approved Template:</strong> Start with a format that works—no need to design from scratch.</li>
-      <li><strong>Gather Your Experiences:</strong> List jobs, internships, volunteer roles, coursework, and projects most relevant to your goals.</li>
-      <li><strong>Write Impactful Bullets:</strong> Use action verbs and highlight your skills, results, and unique contributions.</li>
-      <li><strong>Tailor for Each Opportunity:</strong> Customize your resume for every job or internship you pursue.</li>
-      <li><strong>Review and Edit:</strong> Proofread for errors, check formatting, and ask for feedback from peers or a career coach.</li>
-    </ol>
-  </section>
 
   <section>
     <h2>Resume Resources</h2>
-    <ul>
-      <li>
-        <a href="https://umsi.instructure.com/courses/12345/pages/resume-guide" target="_blank">
-          UMSI Resume Guide and Rubric
-        </a> <br>
-        Comprehensive UMSI guide including tips, formatting rules, and sample accomplishments.
-      </li>
-      <li>
-        <a href="https://umsi.instructure.com/courses/12345/pages/writing-resume-bullets" target="_blank">
-          Writing Effective Resume Bullets
-        </a> <br>
-        Learn how to describe your work and impact in ways employers notice.
-      </li>
-      <li>
-        <a href="https://umsi.instructure.com/courses/12345/pages/resume-rubric" target="_blank">
-          Resume Rubric
-        </a> <br>
-        Evaluate your resume using the same criteria as UMSI’s Career Development Office.
-      </li>
-      <li>
-        <a href="https://umsi.instructure.com/courses/12345/pages/app-materials-resources" target="_blank">
-          Application Materials: Workshops and More
-        </a> <br>
-        Attend a Resume Refresh workshop, review video tutorials, or access additional templates.
-      </li>
-    </ul>
-    <p>
-      Ready for review? <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">Book a resume review appointment with a CDO Career Coach</a>.
-    </p>
+    <div class="resource-list">
+      <article class="resource-item">
+        <h3 class="resource-title">
+          <a href="https://umsi.instructure.com/courses/12345/pages/resume-guide" target="_blank">
+            UMSI Resume Guide and Rubric
+          </a>
+        </h3>
+        <p class="resource-description">
+          Comprehensive UMSI guide including tips, formatting rules, and sample accomplishments.
+        </p>
+      </article>
+      <article class="resource-item">
+        <h3 class="resource-title">
+          <a href="https://umsi.instructure.com/courses/12345/pages/writing-resume-bullets" target="_blank">
+            Writing Effective Resume Bullets
+          </a>
+        </h3>
+        <p class="resource-description">
+          Learn how to describe your work and impact in ways employers notice.
+        </p>
+      </article>
+      <article class="resource-item">
+        <h3 class="resource-title">
+          <a href="https://umsi.instructure.com/courses/12345/pages/resume-rubric" target="_blank">
+            Resume Rubric
+          </a>
+        </h3>
+        <p class="resource-description">
+          Evaluate your resume using the same criteria as UMSI's Career Development Office.
+        </p>
+      </article>
+      <article class="resource-item">
+        <h3 class="resource-title">
+          <a href="https://umsi.instructure.com/courses/12345/pages/app-materials-resources" target="_blank">
+            Application Materials: Workshops and More
+          </a>
+        </h3>
+        <p class="resource-description">
+          Attend a Resume Refresh workshop, review video tutorials, or access additional templates.
+        </p>
+      </article>
+    </div>
   </section>
 
   <section>
@@ -134,15 +137,22 @@
           <!-- Content taken & modified from UMGPT with the prompt, "for the same content write me some intro content and resources for a resume page" - this was after I had asked for content for the home page.
         UMGPT. (2025). UMGPT (GPT-4.1 August 25th version) [Large language model]. -->
 
-    <div>
-         <h2>Networking & Connections</h2>
-           <p>Build relationships that open doors. Explore events, alumni connections, and peer opportunities that help you succeed.</p>
-         </div>
-        <div>
-          <h3>Get Started</h3>
-          <p>Schedule a resume review appointment with our Career Development Office today.</p>
-          <a href="https://si-umich.12twenty.com/events#/events/30006101293729">Book an Appointment</a>
-        </div>
+  <section class="networking-cta-section">
+    <h2>Networking & Connections</h2>
+    <p>Build relationships that open doors. Explore events, alumni connections, and peer opportunities that help you succeed.</p>
+    <div class="cta-container">
+      <div class="cta-card">
+        <h3>Get Started</h3>
+        <p>Begin your networking journey with resources and guidance from the UMSI Career Development Office.</p>
+        <a href="networking.html" class="btn btn-large cta-button">Get Started</a>
+      </div>
+      <div class="cta-card">
+        <h3>Book an Appointment</h3>
+        <p>Schedule a personalized networking strategy session with our career experts.</p>
+        <a href="https://si-umich.12twenty.com/events#/events/30006101293729" class="btn btn-large cta-button" target="_blank">Book an Appointment</a>
+      </div>
+    </div>
+  </section>
     </main>
 
     <footer class="footer">
